Fix projects' line and gap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -256,28 +256,34 @@ header {
 
 /* Projects */
 .projects {
-    height: auto;
+    height: 560px;
     padding: 0 144px;
 
     .container {
         height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
 
         .project-grid {
-            margin-top: 36px;
             display: grid;
             grid-template-rows: repeat(auto-fit, minmax(400px, 1fr));;
-            gap: 3rem;
  
             .project-grid-item {
                 display: flex;
                 align-items: center;
+                column-gap: 3.5rem;
                 
                 img {
                     max-width: 512px;
                 }
 
                 .project-info {
-                    padding: 0 72px;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: start;
+                    row-gap: 1rem;
 
                     h4 {
                       color: var(--grey);
@@ -286,19 +292,17 @@ header {
 
                     p {
                         color: var(--black);
-                        padding: 12px 0;
                         font-size: clamp(1rem, 10vw, var(--body-text));
                     }
 
                     .tech-stack {
                         display: flex;
-                        flex-wrap: wrap;
-                        row-gap: 1rem;
+                        justify-content: flex-start;
+                        align-items: center;
+                        column-gap: 1rem;
                         
                         li {
-                            margin-right: 16px;
-                            width: 100%;
-                            max-width: 72px;
+                            padding: 1rem 1rem;
                             height: 36px;
                             list-style: none;
                             display: inline-flex;
